@@ -4,7 +4,7 @@
 .\" Generator: DocBook XSL Stylesheets v1.75.2 <http://docbook.sf.net/>
 .\"      Date: 03/28/2010
 .\"    Manual: \ \&
-.\"    Source: \ \& 0.10.0
+.\"    Source: \ \& 0.10.1-dev
 .\"  Language: English
 .\"
 .TH "MCABBER" "1" "03/28/2010" "\ \& 0\&.10\&.0\-dev" "\ \&"
